removed redundant overflow on body to prevent transform: translate from expanding the body

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   scroll-behavior: smooth;
   overflow-x: hidden;
   max-width: 100vw;
-  overflow: overlay;
+  /* overflow: overlay; */
 }
 body::-webkit-scrollbar {
   width: 5px;
